And java concurrency sample.